--- a/package.json
+++ b/package.json
@@ -94,6 +94,6 @@
         "node": ">=20.0.0"
     }, 
     "bugs": {
-      "url": "https://RixzzXyz/Zenzo3xe/issues"
+      "url": "https://ArgaXwyz/7Six/issues"
     }
 }
