--- a/package.json
+++ b/package.json
@@ -41,11 +41,29 @@
     "typescript": "^4.6.4",
     "typedoc": "^0.24.7",
     "eslint": "^8.0.0",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "conventional-changelog-cli": "^2.2.2",
+    "jimp": "^0.16.1",
+    "link-preview-js": "^3.0.0",
+    "open": "^8.4.2",
+    "qrcode-terminal": "^0.12.0",
+    "release-it": "^15.10.3",
+    "sharp": "^0.32.2",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.8.1",
+    "json": "^11.0.0"
   },
   "peerDependencies": {
-    "sharp": "^0.32.2",
-    "qrcode-terminal": "^0.12.0"
+    "jimp": "^0.16.1",
+    "link-preview-js": "^3.0.0",
+    "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.32.2"
+  },
+  "peerDependenciesMeta": {
+    "jimp": { "optional": true },
+    "link-preview-js": { "optional": true },
+    "qrcode-terminal": { "optional": true },
+    "sharp": { "optional": true }
   },
   "engines": {
     "node": ">=18.17.0"
@@ -54,46 +72,4 @@
     "url": "https://github.com/ArgaXwyz/7Six/issues"
   },
   "packageManager": "yarn@1.22.19"
-}        "conventional-changelog-cli": "^2.2.2",
-        "eslint": "^8.0.0",
-        "jest": "^27.0.6",
-        "jimp": "^0.16.1",
-        "link-preview-js": "^3.0.0",
-        "open": "^8.4.2",
-        "qrcode-terminal": "^0.12.0",
-        "release-it": "^15.10.3",
-        "sharp": "^0.30.5",
-        "ts-jest": "^27.0.3",
-        "ts-node": "^10.8.1",
-        "typedoc": "^0.24.7",
-        "typescript": "^4.6.4", 
-        "json": "^11.0.0"
-    },
-    "peerDependencies": {
-        "jimp": "^0.16.1",
-        "link-preview-js": "^3.0.0",
-        "qrcode-terminal": "^0.12.0",
-        "sharp": "^0.32.2"
-    },
-    "peerDependenciesMeta": {
-        "jimp": {
-            "optional": true
-        },
-        "link-preview-js": {
-            "optional": true
-        },
-        "qrcode-terminal": {
-            "optional": true
-        },
-        "sharp": {
-            "optional": true
-        }
-    },
-    "packageManager": "yarn@1.22.19",
-    "engines": {
-        "node": ">=20.0.0"
-    }, 
-    "bugs": {
-      "url": "https://ArgaXwyz/7Six/issues"
-    }
 }
