--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dilxzcode/bails",
+    "name": "argaxwyz/bails",
     "version": "1.7.3",
     "description": "Have A Nice Day",
     "keywords": [
